--- a/decks/deck.mdx
+++ b/decks/deck.mdx
@@ -5,6 +5,7 @@ import NoRemove from "../static/images/no-remove.png";
 import Remove from "../static/images/remove.png";
 import PoorPerf from "../static/images/poor-perf-stats.png";
 import Thanks from "../static/images/thanks.webp";
+import Virtualize from "../static/images/virtualize.png";
 
 export const themes = [builtInThemes.dark, customTheme];
 
@@ -133,7 +134,9 @@ export const themes = [builtInThemes.dark, customTheme];
 
 ---
 
-TODO - Terminology image here
+<Box mx="auto" mb={50}>
+  <img src={Virtualize} width={800} />
+</Box>
 
 <Notes>-</Notes>
 
